<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.loja.ecommerce</groupId>
    <artifactId>monolith</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <modules>
        <module>shared-kernel</module>
        <module>user-account</module>
        <module>product-catalog</module>
        <module>order-checkout</module>
        <module>admin-dashboard</module>
        <module>web</module>
    </modules>

    <properties>
        <maven.compiler.release>21</maven.compiler.release>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <jakarta.version>11.0.0</jakarta.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <!-- Jakarta EE 11 Platform (API) -->
            <dependency>
                <groupId>jakarta.platform</groupId>
                <artifactId>jakarta.jakartaee-api</artifactId>
                <version>${jakarta.version}</version>
                <scope>provided</scope>
            </dependency>

            <!-- Internal modules -->
            <dependency>
                <groupId>com.loja.ecommerce</groupId>
                <artifactId>shared-kernel</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.loja.ecommerce</groupId>
                <artifactId>user-account</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.loja.ecommerce</groupId>
                <artifactId>product-catalog</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.loja.ecommerce</groupId>
                <artifactId>order-checkout</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.loja.ecommerce</groupId>
                <artifactId>admin-dashboard</artifactId>
                <version>${project.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.13.0</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-war-plugin</artifactId>
                    <version>3.4.0</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>
